--- a/src/_header.html
+++ b/src/_header.html
@@ -68,8 +68,21 @@
               <li class="header__nav">
                 <a href="#" class="button-link header__button-link">Timetable</a>
               </li>
-              <li class="header__nav">
-                <a href="#" class="button-link header__button-link">Classes</a>
+              <li class="header__nav header__nav-hover">
+                <button class="button-link header__button-link header__button-link-classes">Classes</a>
+                <nav class="header__submenu">
+                  <ul class="header__submenu-navbar">
+                    <li class="header__submenu-nav">
+                      <a href="" class="header__submenu-nav-link">Cardio fintess</a>
+                    </li>
+                    <li class="header__submenu-nav">
+                      <a href="" class="header__submenu-nav-link">Pilates</a>
+                    </li>
+                    <li class="header__submenu-nav">
+                      <a href="" class="header__submenu-nav-link">Aerobics</a>
+                    </li>
+                  </ul>
+                </nav>
               </li>
               <li class="header__nav">
                 <a href="#" class="button-link header__button-link">Blog</a>
