--- a/src/index.html
+++ b/src/index.html
@@ -1,32 +1,78 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gymsport</title>
 
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.min.css" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Gymsport</title>
 
-  </head>
-  <body>
-    <section class="upperheader">
-      <div class="upperheader__info">
-        <div class="upperheader__text">
-          <h2 class="upperheader__info-title">PERFECT Fitness PSD </h2>
-          <h3 class="upperheader__info-subtitle">best choise for your site</h3>
-          <p class="upperheader__info-text">Lorem Ipsum has been the industry's standard dummy text ever since the when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-          </p>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,400;1,600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.min.css" />
+
+</head>
+
+<body>
+  <section class="upperheader">
+    <div class="upperheader__info">
+      <div class="upperheader__text">
+        <h2 class="upperheader__info-title">PERFECT Fitness PSD </h2>
+        <h3 class="upperheader__info-subtitle">best choise for your site</h3>
+        <p class="upperheader__info-text">Lorem Ipsum has been the industry's standard dummy text ever since the when an
+          unknown printer took a galley of type and scrambled it to make a type specimen book.
+        </p>
+      </div>
+      <a href="#" class="button-link upperheader__button-link">Read More</a>
+    </div>
+  </section>
+  @@include('_header.html')
+  <main class="main">
+    <section class="main__title">
+      <div class="container">
+        <div class="main__title-wrapper">
+          <div class="main__title-image">
+            <img class="main__title-img" src="img/index/main__bg.png" alt="main__bg">
+          </div>
+          <div class="main__title-text">
+            <h1 class="main__title-title">Lorem ipsum dolorsit!</h1>
+            <p class="main__title-subtitle">Simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+              been the industry's standard dummy</p>
+          </div>
         </div>
-        <a href="#" class="button-link upperheader__button-link">Read More</a>
       </div>
     </section>
+    <section class="main__liverooms">
+      <div class="container">
+        <div class="main__liverooms-wrapper">
+          <a href="#" class="main__liveroom-link">
+            @@include('_liveroom.html', {
+            "second_word": "spinning",
+            "room": "room 2",
+            "image": '<img src="img/index/spinning.jpg" class="liveroom__image"></img>'
+            })
+          </a>
+          <a href="#" class="main__liveroom-link">
+            @@include('_liveroom.html', {
+            "second_word": "gym",
+            "room": "room 1",
+            "image": '<img src="img/index/gym.jpg" class="liveroom__image"></img>'
+            })
+          </a>
+          <a href="#" class="main__liveroom-link">
+            @@include('_liveroom.html', {
+            "second_word": "pilates",
+            "room": "room 4",
+            "image": '<img src="img/index/pilates.png" class="liveroom__image"></img>'
+            })
+          </a>
+        </div>
+      </div>
+    </section>
+  </main>
 
-    @@include('_header.html')
+  <script src="js/script.js"></script>
+</body>
 
-
-    <script src="js/script.js"></script>
-  </body>
 </html>
