--- a/src/index.html
+++ b/src/index.html
@@ -70,6 +70,11 @@
         </div>
       </div>
     </section>
+    <section class="main__classes-and-prices">
+      <div class="container">
+        @@include('_all-classes.html')
+      </div>
+    </section>
   </main>
 
   <script src="js/script.js"></script>
