--- a/src/_events.html
+++ b/src/_events.html
@@ -8,11 +8,28 @@
         <p class="events__date-text">
           26 Gen, 2014
         </p>
-        <img src="/img/aerobics-1.jpg" alt="aerobics-img">
+        <img class="events__img" src="/img/aerobics-1.jpg" alt="aerobics-img">
       </div>
       <div class="events__info">
         <p class="events__time">h.12.00 - h.13.00</p>
         <p class="events__name">AEROBICS</p>
+        <p class="events__text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit
+        </p>
+        <a href="#" class="events__btn">booking</a>
+      </div>
+    </div>
+    <hr class="events__divide">
+    <div class="events__event">
+      <div class="events__date">
+        <p class="events__date-text">
+          26 Gen, 2014
+        </p>
+        <img class="events__img" src="/img/aerobics-1.jpg" alt="aerobics-img">
+      </div>
+      <div class="events__info">
+        <p class="events__time">h.12.00 - h.13.00</p>
+        <p class="events__name">Spinning</p>
         <p class="events__text">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit
         </p>
