--- a/src/index.html
+++ b/src/index.html
@@ -83,6 +83,7 @@
         <div class="main__info-wrapper">
           @@include('_trainers.html')
           @@include('_events.html')
+          @@include('_from-blog.html')
 
         </div>
       </div>
