--- a/src/_from-blog.html
+++ b/src/_from-blog.html
@@ -4,7 +4,7 @@
     </h2>
     <div class="from-blog__block">
         <div class="from-blog__event">
-            <img class="from-blog__img" src="#" alt="blog-event-img">
+            <img class="from-blog__img" src="img/small/trainer-man-1.jpg" alt="blog-event-img">
             <div class="from-blog__info">
                 <p class="from-blog__text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit
@@ -13,7 +13,7 @@
             </div>
         </div>
         <div class="from-blog__event">
-            <img class="from-blog__img" src="#" alt="blog-event-img">
+            <img class="from-blog__img" src="img/small/trainer-woman-1.jpg" alt="blog-event-img">
             <div class="from-blog__info">
                 <p class="from-blog__text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit
@@ -22,7 +22,7 @@
             </div>
         </div>
         <div class="from-blog__event">
-            <img class="from-blog__img" src="#" alt="blog-event-img">
+            <img class="from-blog__img" src="img/small/trainer-man-2.jpg" alt="blog-event-img">
             <div class="from-blog__info">
                 <p class="from-blog__text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit
