--- a/src/index.html
+++ b/src/index.html
@@ -84,10 +84,10 @@
           @@include('_trainers.html')
           @@include('_events.html')
           @@include('_from-blog.html')
-
         </div>
       </div>
     </section>
+    @@include('_gallery-partner.html')
   </main>
 
   <script src="js/script.js"></script>
