--- a/src/index.html
+++ b/src/index.html
@@ -88,6 +88,7 @@
       </div>
     </section>
     @@include('_gallery-partner.html')
+    @@include('_comment.html')
   </main>
 
   <script src="js/script.js"></script>
