--- a/src/_header.html
+++ b/src/_header.html
@@ -8,7 +8,7 @@
             </svg>
             <p class="header__number">1-900-342-9876</p>
           </a>
-          <div class="header__links">
+          <div class="links">
             <a class="header__link" href="#" >
               <svg class="facebook-icon header__link-icon" >
                 <use xlink:href="img/icons/icons.svg#facebook"></use>
@@ -51,7 +51,7 @@
     <div class="header__bottom">
       <div class="container">
         <div class="header__bottom-inner">
-          <a href="#" class="header__logo">
+          <a href="#" class="logo">
             <img src="img/logo.png" alt="logo">
           </a>
           <nav class="header__navbar">
