--- a/src/index.html
+++ b/src/index.html
@@ -90,8 +90,7 @@
     @@include('_gallery-partner.html')
     @@include('_comment.html')
   </main>
-
+  @@include('_footer.html')
   <script src="js/script.js"></script>
 </body>
-
 </html>
