our trainers start

--- a/src/_header.html
+++ b/src/_header.html
@@ -57,10 +57,10 @@
           <nav class="header__navbar">
             <ul class="header__navbar-list">
               <li class="header__nav">
-                <a href="#" class="button-link header__button-link">Home</a>
+                <a href="index.html" class="button-link header__button-link">Home</a>
               </li>
               <li class="header__nav">
-                <a href="#" class="button-link header__button-link">About</a>
+                <a href="about.html" class="button-link header__button-link">About</a>
               </li>
               <li class="header__nav">
                 <a href="#" class="button-link header__button-link">Trainers</a>
