--- a/src/about.html
+++ b/src/about.html
@@ -105,9 +105,166 @@
               <p class="our-trainers__speciality-text">Maecenas mattis vitae tellus vel interdum. Quisque lacinia mauris id convallis pretium.</p>
             </div>
           </div>
+          <div class="our-trainers__block">
+            <div class="our-trainers__trainer">
+              <img class="trainers__img" src="/img/trainer-woman-1.png" alt="trainer-img">
+              <p class="trainers__name our-trainers__name">REBECCA SMITH</p>
+              <p class="trainers__spec our-trainers__spec">SPINNING</p>
+              <p class="trainers__info our-trainers__info">
+                Creating the perfect body is no small matter.
+              </p>
+              <div class="trainers__icons">
+                <svg class="trainers__icon trainers__icon-like">
+                  <use xlink:href="img/icons/icons.svg#like"></use>
+                </svg>
+                <svg class="trainers__icon trainers__icon-thumb">
+                  <use xlink:href="img/icons/icons.svg#thumbs-up-hand-symbol"></use>
+                </svg>
+                <a href="#" class="trainers__twitter-link">
+                  <svg class="trainers__icon trainers__icon-twitter">
+                    <use xlink:href="img/icons/icons.svg#twitter"></use>
+                  </svg>
+                </a>
+                <a href="#" class="trainers__facebook-link">
+                  <svg class="trainers__icon trainers__icon-facebook">
+                    <use xlink:href="img/icons/icons.svg#facebook"></use>
+                  </svg>
+                </a>
+              </div>
+            </div>
+            <hr class="our-trainers__divide">
+            <div class="our-trainers__text">
+              <p class="our-trainers__quals">Qualifications</p>
+              <p class="our-trainers__quals-text">Maecenas mattis vitae tellus vel interdum. Quisque lacinia mauris id convallis pretium. Aliquam id odio sit amet mauris porttitor iaculis a eu dui.</p>
+              <p class="our-trainers__speciality">Speciality</p>
+              <p class="our-trainers__speciality-text">Maecenas mattis vitae tellus vel interdum. Quisque lacinia mauris id convallis pretium.</p>
+            </div>
+          </div>
+          <div class="our-trainers__block our-trainers__block--light">
+            <div class="our-trainers__trainer">
+              <img class="trainers__img" src="/img/trainer-woman-1.png" alt="trainer-img">
+              <p class="trainers__name our-trainers__name">REBECCA SMITH</p>
+              <p class="trainers__spec our-trainers__spec">SPINNING</p>
+              <p class="trainers__info our-trainers__info">
+                Creating the perfect body is no small matter.
+              </p>
+              <div class="trainers__icons">
+                <svg class="trainers__icon trainers__icon-like">
+                  <use xlink:href="img/icons/icons.svg#like"></use>
+                </svg>
+                <svg class="trainers__icon trainers__icon-thumb">
+                  <use xlink:href="img/icons/icons.svg#thumbs-up-hand-symbol"></use>
+                </svg>
+                <a href="#" class="trainers__twitter-link">
+                  <svg class="trainers__icon trainers__icon-twitter">
+                    <use xlink:href="img/icons/icons.svg#twitter"></use>
+                  </svg>
+                </a>
+                <a href="#" class="trainers__facebook-link">
+                  <svg class="trainers__icon trainers__icon-facebook">
+                    <use xlink:href="img/icons/icons.svg#facebook"></use>
+                  </svg>
+                </a>
+              </div>
+            </div>
+            <hr class="our-trainers__divide">
+            <div class="our-trainers__text">
+              <p class="our-trainers__quals">Qualifications</p>
+              <p class="our-trainers__quals-text">Maecenas mattis vitae tellus vel interdum. Quisque lacinia mauris id convallis pretium. Aliquam id odio sit amet mauris porttitor iaculis a eu dui.</p>
+              <p class="our-trainers__speciality">Speciality</p>
+              <p class="our-trainers__speciality-text">Maecenas mattis vitae tellus vel interdum. Quisque lacinia mauris id convallis pretium.</p>
+            </div>
+          </div>
+          <div class="our-trainers__block our-trainers__block">
+            <div class="our-trainers__trainer">
+              <img class="trainers__img" src="/img/trainer-woman-1.png" alt="trainer-img">
+              <p class="trainers__name our-trainers__name">REBECCA SMITH</p>
+              <p class="trainers__spec our-trainers__spec">SPINNING</p>
+              <p class="trainers__info our-trainers__info">
+                Creating the perfect body is no small matter.
+              </p>
+              <div class="trainers__icons">
+                <svg class="trainers__icon trainers__icon-like">
+                  <use xlink:href="img/icons/icons.svg#like"></use>
+                </svg>
+                <svg class="trainers__icon trainers__icon-thumb">
+                  <use xlink:href="img/icons/icons.svg#thumbs-up-hand-symbol"></use>
+                </svg>
+                <a href="#" class="trainers__twitter-link">
+                  <svg class="trainers__icon trainers__icon-twitter">
+                    <use xlink:href="img/icons/icons.svg#twitter"></use>
+                  </svg>
+                </a>
+                <a href="#" class="trainers__facebook-link">
+                  <svg class="trainers__icon trainers__icon-facebook">
+                    <use xlink:href="img/icons/icons.svg#facebook"></use>
+                  </svg>
+                </a>
+              </div>
+            </div>
+            <hr class="our-trainers__divide">
+            <div class="our-trainers__text">
+              <p class="our-trainers__quals">Qualifications</p>
+              <p class="our-trainers__quals-text">Maecenas mattis vitae tellus vel interdum. Quisque lacinia mauris id convallis pretium. Aliquam id odio sit amet mauris porttitor iaculis a eu dui.</p>
+              <p class="our-trainers__speciality">Speciality</p>
+              <p class="our-trainers__speciality-text">Maecenas mattis vitae tellus vel interdum. Quisque lacinia mauris id convallis pretium.</p>
+            </div>
+          </div>
+          <div class="our-trainers__block our-trainers__block--light">
+            <div class="our-trainers__trainer">
+              <img class="trainers__img" src="/img/trainer-woman-1.png" alt="trainer-img">
+              <p class="trainers__name our-trainers__name">REBECCA SMITH</p>
+              <p class="trainers__spec our-trainers__spec">SPINNING</p>
+              <p class="trainers__info our-trainers__info">
+                Creating the perfect body is no small matter.
+              </p>
+              <div class="trainers__icons">
+                <svg class="trainers__icon trainers__icon-like">
+                  <use xlink:href="img/icons/icons.svg#like"></use>
+                </svg>
+                <svg class="trainers__icon trainers__icon-thumb">
+                  <use xlink:href="img/icons/icons.svg#thumbs-up-hand-symbol"></use>
+                </svg>
+                <a href="#" class="trainers__twitter-link">
+                  <svg class="trainers__icon trainers__icon-twitter">
+                    <use xlink:href="img/icons/icons.svg#twitter"></use>
+                  </svg>
+                </a>
+                <a href="#" class="trainers__facebook-link">
+                  <svg class="trainers__icon trainers__icon-facebook">
+                    <use xlink:href="img/icons/icons.svg#facebook"></use>
+                  </svg>
+                </a>
+              </div>
+            </div>
+            <hr class="our-trainers__divide">
+            <div class="our-trainers__text">
+              <p class="our-trainers__quals">Qualifications</p>
+              <p class="our-trainers__quals-text">Maecenas mattis vitae tellus vel interdum. Quisque lacinia mauris id convallis pretium. Aliquam id odio sit amet mauris porttitor iaculis a eu dui.</p>
+              <p class="our-trainers__speciality">Speciality</p>
+              <p class="our-trainers__speciality-text">Maecenas mattis vitae tellus vel interdum. Quisque lacinia mauris id convallis pretium.</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </section>
+  @@include('_join.html')
+  <section class="about-comment">
+    <div class="about-comment__wrapper">
+      <div class="about-comment__icon">
+        <svg class="about-comment__icon-quote">
+          <use xlink:href="img/icons/icons.svg#right-quote-sign"></use>
+        </svg>
+      </div>
+      <p class="about-comment__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,</p>
+      <p class="about-comment__name">
+        John White
+        <span>CEO - THEUNCREATIVELAB</span>
+      </p>
+    </div>
+  </section>
+  @@include('_gallery-partner.html')
+  @@include('_footer.html')
 </body>
 </html>
