--- a/src/_all-classes.html
+++ b/src/_all-classes.html
@@ -1,5 +1,5 @@
 <div class="all-classes">
-  <h2 class="all-classes__title">ALL CLASSES</h2>
+  <h2 class="all-classes__title">Все категории</h2>
   <div class="all-classes__block">
     <ul class="all-classes__list">
       <li class="all-classes__class">
@@ -7,7 +7,7 @@
           <svg class="all-classes__link-icon all-classes__clock-icon">
             <use xlink:href="img/icons/icons.svg#clock-circular-outline"></use>
           </svg>
-          <p class="all-classes__text">cardio fitness</p>
+          <p class="all-classes__text">Кардио фитнес</p>
         </div>
         <div class="all-classes__links">
           <a href="#" class="all-classes__link all-classes__link-calendar">
@@ -37,7 +37,7 @@
           <svg class="all-classes__link-icon all-classes__clock-icon">
             <use xlink:href="img/icons/icons.svg#clock-circular-outline"></use>
           </svg>
-          <p class="all-classes__text">cardio fitness</p>
+          <p class="all-classes__text">Спиннинг</p>
         </div>
         <div class="all-classes__links">
           <a href="#" class="all-classes__link all-classes__link-calendar">
@@ -67,7 +67,7 @@
           <svg class="all-classes__link-icon all-classes__clock-icon">
             <use xlink:href="img/icons/icons.svg#clock-circular-outline"></use>
           </svg>
-          <p class="all-classes__text">cardio fitness</p>
+          <p class="all-classes__text">Пилатес</p>
         </div>
         <div class="all-classes__links">
           <a href="#" class="all-classes__link all-classes__link-calendar">
@@ -97,7 +97,7 @@
           <svg class="all-classes__link-icon all-classes__clock-icon">
             <use xlink:href="img/icons/icons.svg#clock-circular-outline"></use>
           </svg>
-          <p class="all-classes__text">cardio fitness</p>
+          <p class="all-classes__text">Бокс</p>
         </div>
         <div class="all-classes__links">
           <a href="#" class="all-classes__link all-classes__link-calendar">
@@ -127,7 +127,7 @@
           <svg class="all-classes__link-icon all-classes__clock-icon">
             <use xlink:href="img/icons/icons.svg#clock-circular-outline"></use>
           </svg>
-          <p class="all-classes__text">cardio fitness</p>
+          <p class="all-classes__text">Кик-боксинг</p>
         </div>
         <div class="all-classes__links">
           <a href="#" class="all-classes__link all-classes__link-calendar">
@@ -157,7 +157,7 @@
           <svg class="all-classes__link-icon all-classes__clock-icon">
             <use xlink:href="img/icons/icons.svg#clock-circular-outline"></use>
           </svg>
-          <p class="all-classes__text">cardio fitness</p>
+          <p class="all-classes__text">Аэробика</p>
         </div>
         <div class="all-classes__links">
           <a href="#" class="all-classes__link all-classes__link-calendar">
@@ -187,7 +187,7 @@
           <svg class="all-classes__link-icon all-classes__clock-icon">
             <use xlink:href="img/icons/icons.svg#clock-circular-outline"></use>
           </svg>
-          <p class="all-classes__text">cardio fitness</p>
+          <p class="all-classes__text">Кроссфит</p>
         </div>
         <div class="all-classes__links">
           <a href="#" class="all-classes__link all-classes__link-calendar">
@@ -217,7 +217,7 @@
           <svg class="all-classes__link-icon all-classes__clock-icon">
             <use xlink:href="img/icons/icons.svg#clock-circular-outline"></use>
           </svg>
-          <p class="all-classes__text">cardio fitness</p>
+          <p class="all-classes__text">Йога</p>
         </div>
         <div class="all-classes__links">
           <a href="#" class="all-classes__link all-classes__link-calendar">
@@ -242,8 +242,6 @@
           </a>
         </div>
       </li>
-
-    
     </ul>
   </div>
 </div>
