--- a/src/_header.html
+++ b/src/_header.html
@@ -57,41 +57,41 @@
           <nav class="header__navbar">
             <ul class="header__navbar-list">
               <li class="header__nav">
-                <a href="index.html" class="button-link header__button-link">Home</a>
+                <a href="index.html" class="button-link header__button-link">Главная</a>
               </li>
               <li class="header__nav">
-                <a href="about.html" class="button-link header__button-link">About</a>
+                <a href="about.html" class="button-link header__button-link">О нас</a>
               </li>
               <li class="header__nav">
-                <a href="#" class="button-link header__button-link">Trainers</a>
+                <a href="#" class="button-link header__button-link">Тренеры</a>
               </li>
               <li class="header__nav">
-                <a href="#" class="button-link header__button-link">Timetable</a>
+                <a href="#" class="button-link header__button-link">Расписание</a>
               </li>
               <li class="header__nav header__nav-hover">
-                <button class="button-link header__button-link header__button-link-classes">Classes</a>
+                <button class="button-link header__button-link header__button-link-classes">Категории</a>
                 <nav class="header__submenu">
                   <ul class="header__submenu-navbar">
                     <li class="header__submenu-nav">
-                      <a href="" class="header__submenu-nav-link">Cardio fintess</a>
+                      <a href="" class="header__submenu-nav-link">Кардио фитнес</a>
                     </li>
                     <li class="header__submenu-nav">
-                      <a href="" class="header__submenu-nav-link">Pilates</a>
+                      <a href="" class="header__submenu-nav-link">Пилатес</a>
                     </li>
                     <li class="header__submenu-nav">
-                      <a href="" class="header__submenu-nav-link">Aerobics</a>
+                      <a href="" class="header__submenu-nav-link">Аэробика</a>
                     </li>
                   </ul>
                 </nav>
               </li>
               <li class="header__nav">
-                <a href="#" class="button-link header__button-link">Blog</a>
+                <a href="#" class="button-link header__button-link">Блог</a>
               </li>
               <li class="header__nav">
-                <a href="#" class="button-link header__button-link">Pricing</a>
+                <a href="#" class="button-link header__button-link">Цены</a>
               </li>
               <li class="header__nav">
-                <a href="#" class="button-link header__button-link">Contact</a>
+                <a href="#" class="button-link header__button-link">Контакты</a>
               </li>
             </ul>
           </nav>
