--- a/src/_prices.html
+++ b/src/_prices.html
@@ -1,15 +1,15 @@
 <div class="prices">
   <h2 class="prices__title">
-    Membership 
-    <span>Prices</span>  
+    Цены 
+    <span>Для партнеров</span>  
   </h2>
   <div class="prices__block">
     <p class="prices__block-title">
-      25% discount for all members
+      25% скидка для всех участников
     </p>
     <p class="prices__block-subtitle">
-      Discount on services and treatments at the GymBase for all membership cards holders.
+      Скидка на услуги и процедуры в GYM для всех держателей карт
     </p>
-    <a href="#" class="button-link">More</a>
+    <a href="#" class="button-link">Узнать больше</a>
   </div>
 </div>
