--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,9 @@
   <section class="upperheader">
     <div class="upperheader__info">
       <div class="upperheader__text">
-        <h2 class="upperheader__info-title">PERFECT Fitness PSD </h2>
-        <h3 class="upperheader__info-subtitle">best choise for your site</h3>
-        <p class="upperheader__info-text">Lorem Ipsum has been the industry's standard dummy text ever since the when an
-          unknown printer took a galley of type and scrambled it to make a type specimen book.
+        <h2 class="upperheader__info-title">Фитнес-клуб премиум-класса</h2>
+        <h3 class="upperheader__info-subtitle">Лучший выбор для вашего тела</h3>
+        <p class="upperheader__info-text">Сеть фитнес клубов GYM является экспертом в области фитнеса. Большой выбор спортивного оборудования открывает Вам возможности физического развития в любом направлении
         </p>
       </div>
       <a href="#" class="button-link upperheader__button-link">Read More</a>
@@ -36,9 +35,8 @@
             <img class="main__title-img" src="img/index/main__bg.png" alt="main__bg">
           </div>
           <div class="main__title-text">
-            <h1 class="main__title-title">Lorem ipsum dolorsit!</h1>
-            <p class="main__title-subtitle">Simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-              been the industry's standard dummy</p>
+            <h1 class="main__title-title">GYM - больше, чем фитнес</h1>
+            <p class="main__title-subtitle">Хотите сделать свое тело стройным и здоровым? Хотите заниматься на самом продвиутом оборудовании? Наш многофункциональный тренажерный зал ждет вас!</p>
           </div>
         </div>
       </div>
@@ -48,22 +46,22 @@
         <div class="main__liverooms-wrapper">
           <a href="#" class="main__liveroom-link">
             @@include('_liveroom.html', {
-            "second_word": "spinning",
-            "room": "room 2",
+            "second_word": "Спиннинг",
+            "room": "Зал 2",
             "image": '<img src="img/index/spinning.jpg" class="liveroom__image"></img>'
             })
           </a>
           <a href="#" class="main__liveroom-link">
             @@include('_liveroom.html', {
-            "second_word": "gym",
-            "room": "room 1",
+            "second_word": "Спортзал",
+            "room": "Зал 1",
             "image": '<img src="img/index/gym.jpg" class="liveroom__image"></img>'
             })
           </a>
           <a href="#" class="main__liveroom-link">
             @@include('_liveroom.html', {
-            "second_word": "pilates",
-            "room": "room 4",
+            "second_word": "Пилатес",
+            "room": "Зал 4",
             "image": '<img src="img/index/pilates.png" class="liveroom__image"></img>'
             })
           </a>
