--- a/src/_trainers.html
+++ b/src/_trainers.html
@@ -1,6 +1,6 @@
 <div class="trainers">
   <h2 class="trainers__title">
-    OUR TRAINERS
+    Наши тренеры
   </h2>
   <div class="trainers__block">
     <div class="trainers__trainer">
