--- a/src/_header.html
+++ b/src/_header.html
@@ -69,7 +69,7 @@
                 <a href="#" class="button-link header__button-link">Расписание</a>
               </li>
               <li class="header__nav header__nav-hover">
-                <button class="button-link header__button-link header__button-link-classes">Категории</a>
+                <a href="classes.html" class="button-link header__button-link header__button-link-classes">Категории</a>
                 <nav class="header__submenu">
                   <ul class="header__submenu-navbar">
                     <li class="header__submenu-nav">
