--- a/src/about.html
+++ b/src/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gymsport</title>
+    <title>О нас</title>
   
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
@@ -14,7 +14,7 @@
   </head>
 <body>
   @@include('_header.html')
-  @@include('_underheader-bg.html')
+  <section class="underheader-bg"></section>
   <section class="trainer-bigtitle">
     <div class="container">
       <div class="trainer-bigtitle__wrapper">
