--- a/src/_header.html
+++ b/src/_header.html
@@ -66,7 +66,7 @@
                 <a href="#" class="button-link header__button-link">Тренеры</a>
               </li>
               <li class="header__nav">
-                <a href="#" class="button-link header__button-link">Расписание</a>
+                <a href="timetable.html" class="button-link header__button-link">Расписание</a>
               </li>
               <li class="header__nav header__nav-hover">
                 <a href="classes.html" class="button-link header__button-link header__button-link-classes">Категории</a>
@@ -88,10 +88,10 @@
                 <a href="#" class="button-link header__button-link">Блог</a>
               </li>
               <li class="header__nav">
-                <a href="#" class="button-link header__button-link">Цены</a>
+                <a href="pricing.html" class="button-link header__button-link">Цены</a>
               </li>
               <li class="header__nav">
-                <a href="#" class="button-link header__button-link">Контакты</a>
+                <a href="contact.html" class="button-link header__button-link">Контакты</a>
               </li>
             </ul>
           </nav>
