--- a/src/contact.html
+++ b/src/contact.html
@@ -26,22 +26,36 @@
     </div>
   </section>
   <main class="contact__main">
-    <section class="contact__info">
+    <section class="contact-info">
       <div class="container">
-        <div class="contact__info-wrapper">
+        <div class="contact-info__wrapper">
           <div class="message">
             <p class="message__title">send us a message</p>
             <p class="message__subtitle">We are an independent gym that is committed to working with you to gain the results you. want.</p>
             <form action="#" class="message__form">
-              <input type="text" class="message-input-name">
-              <input type="text" class="message-input-email">
-              <input type="text" class="message-input-subject">
-              <textarea name="message__area" id="message" cols="30" rows="10"></textarea>
+              <input type="text" class="message__input">
+              <input type="text" class="message__input">
+              <input type="text" class="message__input">
+              <textarea class="message__area" name="message__area" id="message" cols="30" rows="10"></textarea>
               <button class="message__btn">Submit your message</button>
               <p class="message__valid">Make sure you put a valid email.</p>
-
-
             </form>
+          </div>
+          <div class="info">
+            <p class="info__title">Contact info</p>
+            <p class="info__text">Ut volutpat consectetur aliquam. Curabitur auctor in nis ulum ornare. Sed consequat, augue condimentum fermentum gravida, metus elit vehicula dui. </p>
+            <a href="tel: 19003429876" class="info__phone">
+              <svg class="info__phone-icon">
+                <use xlink:href="img/icons/icons.svg#phone"></use>
+              </svg>
+              1-900-342-9876
+            </a>
+            <a href="#" class="email__phone">
+              <svg class="info__email-icon">
+                <use xlink:href="img/icons/icons.svg#email"></use>
+              </svg>
+              info@gymsports.com
+            </a>
           </div>
         </div>
       </div>
