--- a/src/_join.html
+++ b/src/_join.html
@@ -2,9 +2,11 @@
   <div class="container">
     <div class="join__wrapper">
       <div class="join__join">
-        <h3 class="join__join-title">WHY JOIN?</h3>
-        <p class="join__join-subtitle">This is an awesome subhead</p>
-        <p class="join__join-text">Maecenas mattis vitae tellus vel interdum. Quisque lacinia mauris id convallis pretium. Aliquam id odio sit amet mauris porttitor iaculis a eu dui.</p>
+        <div class="join__join-info">
+          <h3 class="join__join-title">WHY JOIN?</h3>
+          <p class="join__join-subtitle">This is an awesome subhead</p>
+          <p class="join__join-text">Maecenas mattis vitae tellus vel interdum. Quisque lacinia mauris id convallis pretium. Aliquam id odio sit amet mauris porttitor iaculis a eu dui.</p>
+        </div>
         <button class="join__join-btn">Join Today</button>
       </div>
       <hr class="join__divide">
